--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,50 +3,33 @@
 .registration {
   display: flex;
   flex-direction: column;
-  width: fit-content;
+  width: 90%;
+  max-width: 500px;
+
 }
 
 .login {
   display: flex;
   flex-direction: column;
-  width: fit-content;
+  width: 90%;
+  max-width: 500px;
 }
-
 button {
   width: fit-content;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.eye {
   display: flex;
-  flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-right: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.inputGroupFile01{
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.eye span {
+  position: absolute;
+  margin-bottom: 38px;
 }
